# jogoalgoritimo

./: CMakeLists.txt  FlappyBird.c  FlappyBird.h  README.md  configs.c  configs.h  creditos.c  creditos.h  inicio.c  inicio.h  instrucao.c  instrucao.h  main.c  msg.c  msg.h  score.c  score.h
